--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -31,15 +31,17 @@
                 app:layout_constraintVertical_bias="1.0">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/c_layout"
                     android:layout_width="368dp"
                     android:layout_height="360dp">
 
                     <ImageView
-                        android:id="@+id/imageView"
+                        android:id="@+id/img_superheroe_detail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="50dp"
+                        android:layout_marginTop="48dp"
                         app:layout_constraintEnd_toStartOf="@+id/guideline2"
+                        app:layout_constraintHorizontal_bias="0.484"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:src="@tools:sample/avatars" />
@@ -98,14 +100,14 @@
                         app:layout_constraintTop_toBottomOf="@+id/tv_colour_detail" />
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/tv_power"
                         android:layout_width="173dp"
                         android:layout_height="118dp"
-                        android:text="Power"
+                        android:text="Poder"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/guideline2"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+                        app:layout_constraintTop_toBottomOf="@+id/img_superheroe_detail" />
 
                     <androidx.constraintlayout.widget.Guideline
                         android:id="@+id/guideline2"
@@ -118,8 +120,8 @@
                         android:id="@+id/floating_button_email"
                         android:layout_width="77dp"
                         android:layout_height="59dp"
-                        android:src="@drawable/baseline_email_24"
                         android:contentDescription="@string/send_email"
+                        android:src="@drawable/baseline_email_24"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.7"
