--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -32,13 +32,13 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/c_layout"
-                    android:layout_width="368dp"
-                    android:layout_height="360dp">
+                    android:layout_width="380dp"
+                    android:layout_height="376dp">
 
                     <ImageView
                         android:id="@+id/img_superheroe_detail"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="160dp"
+                        android:layout_height="146dp"
                         android:layout_marginTop="48dp"
                         app:layout_constraintEnd_toStartOf="@+id/guideline2"
                         app:layout_constraintHorizontal_bias="0.484"
@@ -50,10 +50,10 @@
                         android:id="@+id/tv_origin_detail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="32dp"
                         android:text="Origen"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.508"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="@+id/guideline2"
                         app:layout_constraintTop_toBottomOf="@+id/tv_name_detail" />
 
@@ -61,9 +61,10 @@
                         android:id="@+id/tv_year_detail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
+                        android:layout_marginTop="32dp"
                         android:text="Año de creación"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="@+id/guideline2"
                         app:layout_constraintTop_toBottomOf="@+id/tv_origin_detail" />
 
@@ -71,20 +72,21 @@
                         android:id="@+id/tv_name_detail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="70dp"
+                        android:layout_marginTop="76dp"
                         android:text="Nombre"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.505"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="@+id/guideline2"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/tv_colour_detail"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
+                        android:layout_width="48dp"
+                        android:layout_height="21dp"
+                        android:layout_marginTop="32dp"
                         android:text="Color"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="@+id/guideline2"
                         app:layout_constraintTop_toBottomOf="@+id/tv_year_detail" />
 
@@ -95,14 +97,15 @@
                         android:text="Traducción"
                         app:layout_constraintBottom_toTopOf="@+id/floating_button_email"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.495"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toStartOf="@+id/guideline2"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_colour_detail" />
+                        app:layout_constraintTop_toBottomOf="@+id/tv_colour_detail"
+                        app:layout_constraintVertical_bias="0.578" />
 
                     <TextView
                         android:id="@+id/tv_power"
-                        android:layout_width="173dp"
-                        android:layout_height="118dp"
+                        android:layout_width="174dp"
+                        android:layout_height="126dp"
                         android:text="Poder"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/guideline2"
@@ -114,17 +117,18 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        app:layout_constraintGuide_begin="194dp" />
+                        app:layout_constraintGuide_begin="184dp" />
 
                     <com.google.android.material.floatingactionbutton.FloatingActionButton
                         android:id="@+id/floating_button_email"
                         android:layout_width="77dp"
                         android:layout_height="59dp"
+                        android:layout_marginBottom="4dp"
                         android:contentDescription="@string/send_email"
                         android:src="@drawable/baseline_email_24"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.7"
+                        app:layout_constraintHorizontal_bias="0.052"
                         app:layout_constraintStart_toStartOf="@+id/guideline2" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
